[sebi] fixed loader alignment

--- a/src/scss/_styles.scss
+++ b/src/scss/_styles.scss
@@ -86,19 +86,22 @@ h6 {
   }
 }
 
-.main {
-  padding: 1.5em 0;
-  grid-column: 2 / -2;
+.route-container {
   display: grid;
   grid-template-columns: 1fr 3fr;
   grid-column-gap: 1.5rem;
+}
 
-  .drag-sources {
-    display: grid;
-    grid-template-rows: auto;
-    grid-auto-rows: 1fr;
-    grid-row-gap: 15px;
-  }
+.main {
+  grid-column: 2 / -2;
+  padding: 1.5em 0;
+}
+
+.drag-sources {
+  display: grid;
+  grid-template-rows: auto;
+  grid-auto-rows: 1fr;
+  grid-row-gap: 15px;
 }
 
 .footer {
