--- a/src/scss/components/_loader.scss
+++ b/src/scss/components/_loader.scss
@@ -13,7 +13,6 @@
 }
 
 .loader {
-  width: 100%;
   display: flex;
   justify-content: center;
   align-items: center;
